--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     Mujtaba Tirmizi - Programming
                   </div>
                   <div class="project-name">
-                    Mujtaba brings to the table years of machine learning and artificial intellignece experience.
+                    Mujtaba brings to the table machine learning and artificial intellignece experience.
                   </div>
                 </div>
               </div>
@@ -308,8 +308,8 @@
 
 
 			  <div class="col-lg-6 col-sm-6 text-center">
-				<a class="portfolio-box" href="img/waterloo.jpeg">
-				  <img class="img-fluid" src="img/waterloo.jpeg" alt="">
+				<a class="portfolio-box" href="img/waterloo.jpg">
+				  <img class="img-fluid" src="img/waterloo.jpg" alt="">
 				  <div class="portfolio-box-caption">
 					<div class="portfolio-box-caption-content">
 
@@ -322,8 +322,8 @@
 			  </div>
 
 			  <div class="col-lg-6 col-sm-6 text-center">
-				<a class="portfolio-box" href="img/weef.png">
-				  <img class="img-fluid" src="img/weef.png" alt="">
+				<a class="portfolio-box" href="img/weef.jpg">
+				  <img class="img-fluid" src="img/weef.jpg" alt="">
 				  <div class="portfolio-box-caption">
 					<div class="portfolio-box-caption-content">
 					  <div class="project-name">
