--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
 
 
 			  <div class="col-lg-6 col-sm-6 text-center">
-				<a class="portfolio-box" href="img/waterloo.jpg">
-				  <img class="img-fluid" src="img/waterloo.jpg" alt="">
+				<a class="portfolio-box" href="img/Waterloo.jpg">
+				  <img class="img-fluid" src="img/Waterloo.jpg" alt="">
 				  <div class="portfolio-box-caption">
 					<div class="portfolio-box-caption-content">
 
@@ -322,8 +322,8 @@
 			  </div>
 
 			  <div class="col-lg-6 col-sm-6 text-center">
-				<a class="portfolio-box" href="img/weef.jpg">
-				  <img class="img-fluid" src="img/weef.jpg" alt="">
+				<a class="portfolio-box" href="img/Weef.jpg">
+				  <img class="img-fluid" src="img/Weef.jpg" alt="">
 				  <div class="portfolio-box-caption">
 					<div class="portfolio-box-caption-content">
 					  <div class="project-name">
