--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Collecta - FYDP</title>
+    <title>Collecta - Capstone</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Collecta -  Final Year Design Project</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Collecta - Capstone Project</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,7 +43,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#features">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#design">Design</a>
@@ -69,13 +69,13 @@
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h1 class="text">
-			<br>Collecta - VolleyBall Collecting Robot
+			<br>Collecta - Volleyball Collection Robot
               <strong></strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-black">Automating the manual efforts and time required by athletes to collect volleyballs indoors</p>
+            <h2 class="text-black">Your Partner for Efficient Practice!<br>&nbsp</h2>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
@@ -87,10 +87,10 @@
     <section class="bg-primary" id="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Our Solution to BallSports</h2>
+          <div class="col-lg-12 mx-auto text-center">
+            <h2 class="section-heading text-white">MOTIVATION</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Athletes spend alot of time and effort after practice to collect and organize loose volleyballs. Our FYDP aims to solve this problem through automation.</p>
+            <p class="text-faded mb-4">Athletes face immense frustration when practising due to time wasted walking around collecting balls. <br>Our capstone project aims to solve this problem through automation.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Check Out Our Robot!</a>
           </div>
         </div>
@@ -100,7 +100,7 @@
 
                                 <!--        =============== CHARACTERISTICS PAGE ===============         -->
 
-    <section id="services">
+    <section id="features">
 
       <div class="container">
         <div class="row">
@@ -119,7 +119,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-fighter-jet text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Top Speed</h3>
-              <p class="text-muted mb-0">The robot is expected to reach top speeds of 2 m/s. That means it can traverse an entire volleyball court in under 5 seconds.</p>
+              <p class="text-muted mb-0">The robot is expected to reach a top speed of 2 m/s. That means it can traverse an entire volleyball court in approximately 10 seconds.</p>
             </div>
           </div>
 
@@ -135,7 +135,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-cloud text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Lightweight and Portable</h3>
-              <p class="text-muted mb-0">Weighing less than a standard piece of luggage, Collecta can be moved and used in any indoor volleyball court.</p>
+              <p class="text-muted mb-0">Collecta can be moved and used in any indoor volleyball court. Designed to be portable, weighing less than a standard piece of checked baggage.</p>
             </div>
           </div>
 
@@ -143,7 +143,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-cog fa-spin fa-4x fa-fw text-primary"></i>
               <h3 class="mb-3">Quick Ball Retrieval and Storage</h3>
-              <p class="text-muted mb-0">Collecta collects balls at a fast rate upto 3 volleyballs per run.</p>
+              <p class="text-muted mb-0">The robot collects balls at a fast rate up to 3 volleyballs per run.</p>
             </div>
           </div>
 
@@ -155,9 +155,9 @@
 		                                   <!--        =============== DETAILED DESIGN SECTION ===============         -->
 
 
-<section class="bg-light" id="design">
+<section class="bg-light">
 
-      <div class=" text-center">
+      <div class=" text-center" id="design">
         <h2>DETAILED DESIGN</h2>
         <hr class="my-4">
       </div>
@@ -167,8 +167,8 @@
         <div class="row no-gutters popup-gallery align-items-center">
 
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/Frame.png">
-              <img class="img-fluid img-fill" src="img/Frame.png" alt="">
+            <a class="portfolio-box text-center" href="img/Frame.png">
+              <img class="img-fluid img-fill" style="height:240px" src="img/Frame.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -181,10 +181,9 @@
               </div>
             </a>
           </div>
-
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/Empty.png">
-              <img class="img-fluid" src="img/Empty.png" alt="">
+            <a class="portfolio-box text-center" href="img/Kinect.png">
+              <img class="img-fluid" style="height:240px" src="img/Kinect.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -197,22 +196,71 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/Final.png">
-              <img class="img-fluid" src="img/Final.png" alt="">
+		            <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box text-center" href="img/EntryRamp.png">
+              <img class="img-responsive" style="height:240px; width: 100%" src="img/EntryRamp.png" alt="" >
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Ball Retrieval
+                    Entry Ramp
                   </div>
                   <div class="project-name">
-                    Collecta has a capacity of 3 volleyball with collection cycle time of 1 second.
-                    Balls are released from the inclined storage system through the back gate.
+                    Collecta features an entry ramp for smooth and easy volleyball pick-up.
                   </div>
                 </div>
               </div>
             </a>
           </div>
+
+		
+		<div class="row no-gutters popup-gallery align-items-center">
+
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box text-center" href="img/StorageRamp.png">
+              <img class="img-fluid img-fill" style="height:240px" src="img/StorageRamp.png" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Storage Ramp
+                  </div>
+                  <div class="project-name">
+                    The robot has a capacity of 3 volleyballs settled on an incline ramp for easy unloading through a back gate.
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+		  <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box text-center" href="img/Collection.png">
+              <img class="img-fluid" style="height:240px; width: 100%" src="img/Collection.png" alt="" >
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Ball Collection System
+                  </div>
+                  <div class="project-name">
+                    The robot features a custom volleyball collection system with a cycle time of approximately 2 seconds.
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+		  <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box text-center" href="img/FinalRobot.png">
+              <img class="img-responsive" style="height:240px; width: 100%" src="img/FinalRobot.png" alt="" >
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Final Assembly
+                  </div>
+                  <div class="project-name">
+                    The final robot assembly for autonomous volleyball detection, collection and retrieval.
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+
 
         </div>
 
@@ -230,11 +278,11 @@
 
       <div class="container-fluid">
 
-        <div class="row  popup-gallery align-items-center">
+        <div class="row no-gutters popup-gallery align-items-center" style="height:100%">
 
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/Omar.png">
-              <img class="img-fluid " src="img/Omar.png" alt="">
+            <a class="portfolio-box text-center" href="img/Omar.png">
+              <img class="img-fluid" style="height: 440px" src="img/Omar.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -249,8 +297,8 @@
           </div>
 
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/Ahmed.jpg">
-              <img class="img-fluid" src="img/Ahmed.jpg" alt="">
+            <a class="portfolio-box text-center" href="img/Ahmed.jpg">
+              <img class="img-fluid" style="height: 440px" src="img/Ahmed.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -264,15 +312,15 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/Mujtaba.jpg">
-              <img class="img-fluid" src="img/Mujtaba.jpg" alt="">
+            <a class="portfolio-box text-center" href="img/Mujtaba.jpg">
+              <img class="img-fluid" style="height: 440px" src="img/Mujtaba.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Mujtaba Tirmizi - Programming
+                    Mujtaba Tirmizi - Software / ML
                   </div>
                   <div class="project-name">
-                    Mujtaba brings to the table machine learning and artificial intellignece experience.
+                    Mujtaba brings to the table machine learning and artificial intelligence experience.
                   </div>
                 </div>
               </div>
@@ -307,23 +355,9 @@
 			<div class="row no-gutters popup-gallery align-items-center">
 
 
-			  <div class="col-lg-6 col-sm-6 text-center">
-				<a class="portfolio-box" href="img/Waterloo.jpg">
-				  <img class="img-fluid" src="img/Waterloo.jpg" alt="">
-				  <div class="portfolio-box-caption">
-					<div class="portfolio-box-caption-content">
-
-					  <div class="project-name">
-						University of Waterloo<br>Faculty of Engineering<br>Mechanical and Mechatronics Departement
-					  </div>
-					</div>
-				  </div>
-				</a>
-			  </div>
-
-			  <div class="col-lg-6 col-sm-6 text-center">
+			  <div class="col-lg-4 col-sm-6 text-center">
 				<a class="portfolio-box" href="img/Weef.jpg">
-				  <img class="img-fluid" src="img/Weef.jpg" alt="">
+				  <img class="img-fluid" style="height:140px" src="img/Weef.jpg" alt="">
 				  <div class="portfolio-box-caption">
 					<div class="portfolio-box-caption-content">
 					  <div class="project-name">
@@ -333,6 +367,33 @@
 				  </div>
 				</a>
 			  </div>
+			  			 <div class="col-lg-4 col-sm-6 text-center">
+				<a class="portfolio-box" href="img/Waterloo.jpg">
+				  <img class="img-fluid" style="height:140px" src="img/Waterloo.jpg" alt="">
+				  <div class="portfolio-box-caption">
+					<div class="portfolio-box-caption-content">
+
+					  <div class="project-name">
+						Faculty of Engineering<br>Mechanical and Mechatronics Department
+					  </div>
+					</div>
+				  </div>
+				</a>
+			  </div>
+			  <div class="col-lg-4 col-sm-6 text-center">
+				<a class="portfolio-box" href="img/MME.png">
+				  <img class="img-fluid" style="height:140px" src="img/MME.png" alt="">
+				  <div class="portfolio-box-caption">
+					<div class="portfolio-box-caption-content">
+					  <div class="project-name">
+						Waterloo Mechanical and Mechatronics Engineering Department
+					  </div>
+					</div>
+				  </div>
+				</a>
+			  </div>
+			  
+
 
         <div class="container text-center">
 
@@ -374,18 +435,15 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="my-4">
-            <p class="mb-5">Ready to be a part of this exciting project? Wish to sponsor us? <br> Please give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p class="mb-5">Ready to be a part of this exciting project? Wish to sponsor us? <br> Please send us an email and we will get back to you as soon as possible!</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>226-989-7893</p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
+ 
+          <div class="col-lg-12 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">omar.mogouda@gmail.com</a>
+              <a href="mailto:your-email@your-domain.com">collecta.uwaterloo@gmail.com</a>
             </p>
           </div>
         </div>
