--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="blog.html">Blog</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -196,7 +199,7 @@
               </div>
             </a>
           </div>
-		            <div class="col-lg-4 col-sm-6">
+		      <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box text-center" href="img/EntryRamp.png">
               <img class="img-responsive" style="height:240px; width: 100%" src="img/EntryRamp.png" alt="" >
               <div class="portfolio-box-caption">
