--- a/blog.html
+++ b/blog.html
@@ -79,7 +79,7 @@
             <img class="img-fluid" style="height: 315px; width: 236px; float: left" src="img/collecta_tech.jpg" alt="">
             <div class="content" style="padding-left: 250px">
               <h2>Jan 18, 2018</h2>
-              <p>This is the teams first official blog entry. The team is currently in the process of ordering parts and megining manufacturing. In parrallel the team has begun working on the vision system for the ball detection. The team is excited about the robot development and looking forward to keep you all updated. Stay tuned for our future updates.</p>
+              <p>This is the teams first official blog entry. The team is currently in the process of ordering parts and beginning manufacturing. In parallel, the team has begun working on the vision system for the ball detection. The team is excited about the robot development and looking forward to keep you all updated. Stay tuned for our future updates.</p>
             </div>
           </div>
         </div>
