--- a/blog.html
+++ b/blog.html
@@ -74,18 +74,161 @@
       </div>
 
       <div class="container-fluid p-0">
+
         <div class="timeline">
+
           <div class="container" style="height: 0px">
-            <img class="img-fluid" style="height: 315px; width: 236px; float: left" src="img/collecta_tech.jpg" alt="">
-            <div class="content" style="padding-left: 250px">
-              <h2>Jan 18, 2018</h2>
-              <p>This is the teams first official blog entry. The team is currently in the process of ordering parts and beginning manufacturing. In parallel, the team has begun working on the vision system for the ball detection. The team is excited about the robot development and looking forward to keep you all updated. Stay tuned for our future updates.</p>
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left" src="img/collecta_tech.jpg" alt="">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Jan 18, 2018</h2>
+                  <p>This is the teams first official blog entry. The team is currently in the process of ordering parts and beginning manufacturing. In parallel, the team has begun working on the vision system for the ball detection. The team is excited about the robot development and looking forward to keep you all updated. Stay tuned for our future updates.</p>
+                </div>
+              </div>
             </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/driving.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Feb 27, 2018</h2>
+                  <p>Machining of driving motor mounting plates is started after all the required stock parts and motors are delivered from suppliers.
+                  These include motor mounts for four driving motors as well as the front ball collecting motor and the back gate motor. These motors are different and so require different mounting plates.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/wheels.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 05, 2018</h2>
+                  <p>The wheels axles are machined. These connect each of the four rubber wheels selected to the driving motors. These are machined on a lathe, drilled on a mill and tapped manually.
+                  The axles work by mounting on the slotted driving motor shaft secured in place using two set screws. The smaller diameter end is then press fit into the rubber wheels for torque transmission.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/chassis.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 06, 2018</h2>
+                  <p>The chassis made of aluminum extrusions is assembled using t-nuts/bolts and corner brackets. The machined motor mounting plates are then assembled on to required positions.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/ramp.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 08, 2018</h2>
+                  <p>The MDF wooden base is assembled as required. This involves the inlet front ramp, hinged to a sloped storage ramp that is boxed by two side blocks.
+                  The wooden back gate is a separate component that is then mounted on to the back gate motor to control the release of volleyballs.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/assembly.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 11, 2018</h2>
+                  <p>The wooden base, aluminum chassis, wheels, motor mounting plates, motors, battery and the kinect battery are all assembled together to result in a stable initial prototype.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/ballcollect.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 12, 2018</h2>
+                  <p>The ball collection assembly is mounted onto the aluminum frame. This involves attaching an axle with two blocks protuding out to swing and push volleyballs onto the wooden ramp.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/kinect.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 13, 2018</h2>
+                  <p>Initial software programming and setup is underway. Required software packages and addons are installed for the kinect camera and electronic boards. </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/driving.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 17, 2018</h2>
+                  <p>Electronic integration and electrical wiring is started where all the motors are connected to the corresponding motor controllers. The motor controllers are also connected to the respective arduino pins which is debugged live during the wiring process.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/painting.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 18, 2018</h2>
+                  <p>The wooden base is disassembled, and blue paint is used to coat all the components for a better product look. This is chosen to complement the silver extrusions and red volleyballs.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/fieldtestarea.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 19, 2018</h2>
+                  <p>A field testing area is setup in one of the student lecture rooms. The tables are oriented in such a manner to create an enclosed arena with a white background for optimal testing conditions. This minimizes environmental interference with the kinect camera and allows for smoother and more efficient debugging.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/electronicmounting.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 20, 2018</h2>
+                  <p>Required electronics are securely mounted at the base of the robot for easy access and neat organisation. This involes the motor controllers for all the motors, jettson board, and arduino. The wires are all connected and soldered as required and then neatly secured taking into account efficient routing and minimal stress on the components. Easy access is also considered for the HDMI cable and USB ports.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/fieldtest.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 21, 2018</h2>
+                  <p>The integrated product is tested in the setup environment. The detection capabilities and the frame rate of the kinect is tested. The robot is run several times to ensure that it can successfully search for volleyballs, detect them correctly using the kinect and follow the appropriate path to reach the ball and swiftly collect the volleyball.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/final.jpg">
+                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                  <h2>Mar 22, 2018</h2>
+                  <p>The final product is cleaned, polished and prepared for display at the Mechatronics Engineering Capstone Project Symmposium on March 23rd.</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
           </div>
         </div>
-      </div>
+
+
 
 </section>
+
 
 
     <!-- Bootstrap core JavaScript -->
