--- a/blog.html
+++ b/blog.html
@@ -90,6 +90,16 @@
 
             <div class="row">
               <div class="col-lg-12 mx-auto">
+                <div class="content text-center">
+                  <hr class="my-4">
+                  <h2>Part Machining and Fabrication</h2>
+                  <hr class="my-4">
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
                 <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/driving.jpg">
                 <div class="content" style="padding-left: 250px; padding-top: 80px">
                   <h2>Feb 27, 2018</h2>
@@ -106,6 +116,16 @@
                   <h2>Mar 05, 2018</h2>
                   <p>The wheels axles are machined. These connect each of the four rubber wheels selected to the driving motors. These are machined on a lathe, drilled on a mill and tapped manually.
                   The axles work by mounting on the slotted driving motor shaft secured in place using two set screws. The smaller diameter end is then press fit into the rubber wheels for torque transmission.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <div class="content text-center">
+                  <hr class="my-4">
+                  <h2>Assembly and Integration</h2>
+                  <hr class="my-4">
                 </div>
               </div>
             </div>
@@ -183,8 +203,18 @@
 
             <div class="row">
               <div class="col-lg-12 mx-auto">
-                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/fieldtestarea.jpg">
-                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                <div class="content text-center">
+                  <hr class="my-4">
+                  <h2>Final Testing Phase</h2>
+                  <hr class="my-4">
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <img class="fluid" style="height: 315px; width: 400px; float: left; padding-top: 20px " src="img/blog/fieldtestarea.jpg">
+                <div class="content" style="padding-left: 420px; padding-top: 80px">
                   <h2>Mar 19, 2018</h2>
                   <p>A field testing area is setup in one of the student lecture rooms. The tables are oriented in such a manner to create an enclosed arena with a white background for optimal testing conditions. This minimizes environmental interference with the kinect camera and allows for smoother and more efficient debugging.</p>
                 </div>
@@ -193,8 +223,8 @@
 
             <div class="row">
               <div class="col-lg-12 mx-auto">
-                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/electronicmounting.jpg">
-                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                <img class="fluid" style="height: 315px; width: 400px; float: left; padding-top: 20px " src="img/blog/electronicmounting.jpg">
+                <div class="content" style="padding-left: 420px; padding-top: 80px">
                   <h2>Mar 20, 2018</h2>
                   <p>Required electronics are securely mounted at the base of the robot for easy access and neat organisation. This involes the motor controllers for all the motors, jettson board, and arduino. The wires are all connected and soldered as required and then neatly secured taking into account efficient routing and minimal stress on the components. Easy access is also considered for the HDMI cable and USB ports.</p>
                 </div>
@@ -203,8 +233,8 @@
 
             <div class="row">
               <div class="col-lg-12 mx-auto">
-                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/fieldtest.jpg">
-                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                <img class="fluid" style="height: 315px; width: 400px; float: left; padding-top: 20px " src="img/blog/fieldtest.jpg">
+                <div class="content" style="padding-left: 420px; padding-top: 80px">
                   <h2>Mar 21, 2018</h2>
                   <p>The integrated product is tested in the setup environment. The detection capabilities and the frame rate of the kinect is tested. The robot is run several times to ensure that it can successfully search for volleyballs, detect them correctly using the kinect and follow the appropriate path to reach the ball and swiftly collect the volleyball.</p>
                 </div>
@@ -213,8 +243,8 @@
 
             <div class="row">
               <div class="col-lg-12 mx-auto">
-                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/final.jpg">
-                <div class="content" style="padding-left: 250px; padding-top: 80px">
+                <img class="fluid" style="height: 315px; width: 400px; float: left; padding-top: 20px " src="img/blog/final.jpg">
+                <div class="content" style="padding-left: 420px; padding-top: 80px">
                   <h2>Mar 22, 2018</h2>
                   <p>The final product is cleaned, polished and prepared for display at the Mechatronics Engineering Capstone Project Symmposium on March 23rd.</p>
                 </div>
