--- a/blog.html
+++ b/blog.html
@@ -183,7 +183,7 @@
 
             <div class="row">
               <div class="col-lg-12 mx-auto">
-                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/driving.jpg">
+                <img class="fluid" style="height: 315px; width: 236px; float: left; padding-top: 20px " src="img/blog/wiring.jpg">
                 <div class="content" style="padding-left: 250px; padding-top: 80px">
                   <h2>Mar 17, 2018</h2>
                   <p>Electronic integration and electrical wiring is started where all the motors are connected to the corresponding motor controllers. The motor controllers are also connected to the respective arduino pins which is debugged live during the wiring process.</p>
