--- a/blog.html
+++ b/blog.html
@@ -251,6 +251,14 @@
               </div>
             </div>
 
+            <div class="row">
+              <div class="col-lg-12 mx-auto">
+                <div class="text">
+                  <h2><br></h2>
+                </div>
+              </div>
+            </div>
+
           </div>
           </div>
         </div>
